improve memory settings